# dl

./: LLM_Agent_Tutorial.md  LLM_学习路径推荐.md  Makefile  README.md  contiguous_explanation.py  demo_complete_project.py  gpt_shift_logits_example.py  pyproject.toml  run_all_tutorials.py  validate_project.py  总结_完整Transformer教学项目.md
advanced_topics/: README_advanced.md
bert/: README_bert_tutorial.md  bert_components.py  bert_model.py  bert_pretraining.py  quick_start.py  run_examples.py
cbow/: cbow_example.py  cbow_model.pth  cbow_model.py  test_cbow.py  trained_cbow_model.pth  verify_embedding_updates.py
gpt/: README_gpt_tutorial.md  gpt_model.py  quick_start.py  train_gpt.py
instruction_tuning/: README_instruction_tuning.md  quick_start.py  sft_trainer.py
llm_examples/: llm_agent_example.py  rag_example.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
ml/logistic_regression/: logistic_regression.ipynb  logistic_regression.py
multimodal/: README_multimodal.md
optimization/: README_optimization.md
research_trends/: README_research_trends.md
transfomer/: README_transformer_tutorial.md  attention_visualization.py  positional_encoding.py  quick_start.py  run_examples.py  text_generation_example.py  train_transformer.py  transformer_components.py  transformer_model.py  verify_structure.py
vit/: README_vit_tutorial.md  patch_embedding.py  quick_start.py  run_examples.py  verify_vit_structure.py  vit_components.py  vit_model.py  vit_trainer.py
